Some Text changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@ setTimeout('Elastic()',100)
 <CENTER>
 <font color="white"><h2>Hello from <font color="yellow">Denis Astahov!</font><br>
 Welcome to Python Flask Web Page!
-<font color="red"><H1 ID="elastic" ALIGN="Center">AWS App Runner Rulezzz!</H1>
-<font color="gold">This is AWS App Runner with Python Flask Application<br>
+<font color="red"><H1 ID="elastic" ALIGN="Center">My first AWS AppRunner Pipeline!!!!</H1>
+<font color="gold">Fuck u all, i a'm freee!!!<br>
 </body>
 </HTML>
