--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@ setTimeout('Elastic()',100)
 </SCRIPT>
 <BODY  bgcolor=black  onLoad=Elastic()>
 <CENTER>
-<font color="white"><h2>Hello from <font color="yellow">Denis Astahov!</font><br>
+<font color="white"><h2>Hello from <font color="yellow">NAZARRRR SOPKIV!</font><br>
 Welcome to Python Flask Web Page!
 <font color="red"><H1 ID="elastic" ALIGN="Center">My first AWS AppRunner Pipeline!!!!</H1>
 <font color="gold">Fuck u all, i a'm freee!!!<br>
